--- a/PlatformerExample/PlatformerExample.csproj
+++ b/PlatformerExample/PlatformerExample.csproj
@@ -53,6 +53,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="BoundingRectangle.cs" />
+    <Compile Include="Camera.cs" />
     <Compile Include="Grid.cs" />
     <Compile Include="TempUnit.cs" />
     <Compile Include="Game1.cs" />
