--- a/PlatformerExample/PlatformerExample.csproj
+++ b/PlatformerExample/PlatformerExample.csproj
@@ -55,6 +55,10 @@
     <Compile Include="BoundingRectangle.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="Grid.cs" />
+    <Compile Include="King.cs" />
+    <Compile Include="KingIdle.cs" />
+    <Compile Include="KingState.cs" />
+    <Compile Include="KingWalking.cs" />
     <Compile Include="TempUnit.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="IBoundable.cs" />
